login/register forms

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -10,7 +10,11 @@
 <body>
     {% include 'includes/navbar.html' %}
 
+    
+
     <div class="container">
+    
+        {% include 'includes/messages.html' %}
     
         {% block content %}
         {% endblock content %}
