operations, wallet deletion

--- a/templates/create_operation.html
+++ b/templates/create_operation.html
@@ -4,7 +4,8 @@
 
 <h1 class="text-center">Create Operation</h1>
 
-<form action="/wallet/{{ wallet.id }}/operations/create" method="post">
+<form action="/wallet/{{ wallet.id }}/operation/create/type/{{ form.type_id.data }}" method="post">
+
     {% for field in form %}
         <div class="form-group">
             {{ field.label }}
