--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -42,6 +42,10 @@
         <hr class="my-4">
         <a href="/wallet/create" class="btn btn-dark">Create Wallet</a>
     </div>
+    <div class="text-center">
+        <hr class="my-4">
+        <a href="/category/create" class="btn btn-dark">Create Category</a>
+    </div>
     </div>
 
     <div class="row">
