operation edit/delete

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -77,7 +77,7 @@
                     {% else %}
                     <p class="text-center">No operations yet</p>
                 {% endif %}
-                <a href="{{ url_for('operations_list') }}" class="btn btn-secondary">All Operations</a>
+                <a href="{{ url_for('operations_list') }}" class="btn btn-secondary btn-block">All Operations</a>
             </div>
         </div>
 
