--- a/templates/edit_operation.html
+++ b/templates/edit_operation.html
@@ -15,7 +15,8 @@
     <button type="submit" class="btn btn-dark">Submit</button>
 </form>
 <h2 class="my-3">Or you can...</h2>
-<form action="/operation/delete/{{ operation.id }}" method="post">
+
+<form action="{{ url_for('delete_operation', user_id=current_user.id, op_id=operation.id) }}" method="post">
     <input type="hidden">
     <button type='submit' class="btn btn-danger">Delete</button>
 </form>
