--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -23,7 +23,8 @@
                     <a href="/wallet/{{ wallet.id }}/operation/create/type/2" class="btn btn-light">
                         —
                     </a>
-                    <a href="/wallet/edit/{{wallet.id}}" class="btn btn-secondary">Edit Wallet</a>
+                    <a href="/wallet/{{wallet.id}}/transfer/create" class="btn btn-light">Transfer</a>
+                    <a href="/wallet/edit/{{wallet.id}}" class="btn btn-dark btn-block mt-2">Edit</a>
                 </div>
             </div>
         </div>
