--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Wallet | {{ current_user.username if current_user.is_authenticated else '' }}</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 </head>
 <body>
     {% include 'includes/navbar.html' %}
@@ -20,6 +21,8 @@
         {% endblock content %}
     
     </div>
+
+
 
 {% block scripts %}
 
